added comments to CSS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,11 @@
     padding: 0;
     margin: 0;
 }
-
+/*--Body--*/
 body {
     background-color: #d9dcd6;
 }
-
+/*--Header--*/
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -23,7 +23,7 @@ header h1 {
 header h1 .seo {
     color: #d9dcd6;
 }
-
+/*Navigation*/
 nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -45,7 +45,7 @@ a {
     color: #ffffff;
     text-decoration: none;
 }
-
+/*--Main--*/
 p {
     font-size: 16px;
 }
@@ -75,7 +75,7 @@ p {
     display: inline-block;
     margin-left: 20px;
 }
-
+/*--Sidebar--*/
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -188,7 +188,7 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+/*--Footer--*/
 .footer {
     padding: 30px;
     clear: both;
